# UMD_EmbeddedFaceDetector

./: README.md
About/: README  dataset-partition.txt
Classifier/: CMakeCache.txt  CMakeLists.txt  Makefile  README  cmake_install.cmake
Classifier/src/: CMakeCache.txt  CMakeLists.txt  Makefile  README.txt  cmake_install.cmake  makeme
Classifier/src/Actors/: IIS.h  ImgRead.cpp  ImgRead.h  README  classifier.cpp  classifier.h  file_sink.cpp  file_sink.h
Classifier/src/Graph/: README  face_detector.cpp  face_detector.h
Classifier/test/: README
Classifier/test/autotest-output/: test_output.txt  test_output.txt.bak  test_summary.txt
Classifier/test/test01/: CMakeLists.txt  Makefile  README.txt  cmake_install.cmake  config.txt  driver01.cpp  runme  test-desc.txt
Classifier/test/test01/autotest-output/: output.txt  test_output.txt  test_output.txt.bak
Classifier/test/test02/: CMakeLists.txt  Makefile  cmake_install.cmake  config.txt  correct-output.txt  driver02.cpp  makeme  runme  test-desc.txt
Classifier/test/test02/autotest-output/: test_output.txt  test_output.txt.bak
Classifier/test/test03/: CMakeLists.txt  Makefile  cmake_install.cmake  config.txt  correct-output.txt  driver03.cpp  runme  test-desc.txt
Classifier/test/test03/autotest-output/: test_output.txt  test_output.txt.bak
Classifier/test/test04/: CMakeLists.txt  Makefile  cmake_install.cmake  config.txt  correct-output.txt  driver04.cpp  runme  test-desc.txt
Classifier/test/test05/: CMakeLists.txt  Makefile  cmake_install.cmake  correct-output.txt  driver05.cpp  output.txt  runme  test-desc.txt
Classifier/test/test05/autotest-output/: output.txt
Classifier/test/test06/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  diagnostics.txt  driver06.cpp  runme  saved-output.txt  test-desc.txt
Classifier/test/test06/autotest-output/: test_output.txt  test_output.txt.bak
Classifier/test/test07/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  config3.txt  diagnostics.txt  driver07.cpp  imgLabels.txt  output.txt  runme  stats.sh  test-desc.txt
Classifier/test/test07/autotest-output/: test_output.txt  test_output.txt.bak
Classifier/test/test08/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  config1.txt  config2.txt  correct-output.txt  diagnostics.txt  makeme  runme  test-desc.txt
Classifier/test/test08/txt/: face00101.txt  face00201.txt  face00301.txt  face00351.txt  face00701.txt  face01151.txt  face01201.txt  face01351.txt  face01401.txt  face02051.txt  face02301.txt
Classifier/test/test09/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  config1.txt  config2.txt  diagnostics.txt  driver09.cpp  imgLabels.txt  output.txt  runme  test-desc.txt
Classifier/test/test09/txt/: face00051.txt  face00551.txt  face00651.txt  face01051.txt  face01101.txt  face01651.txt  face02351.txt
Classifier/test/test10/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  config2.txt  diagnostics.txt  output.txt  runme  test-desc.txt
Classifier/test/test10/autotest-output/: error_output.txt  test_output.txt  test_output.txt.bak
Classifier/test/test10/txt/: face00751.txt  face00951.txt  face01301.txt  face01701.txt
Classifier/test/test11/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  config1.txt  config2.txt  config3.txt  config4.txt  correct-output.txt  diagnostics.txt  runme  test-desc.txt
Classifier/test/test11/autotest-output/: test_output.txt
Classifier/test/test11/txt/: face00151.txt  face00251.txt  face01001.txt  face02151.txt
Classifier/test/test12/: CMakeLists.txt  correct-output-IIS.txt  imgLabels.txt  imgReadDriver1.cpp  output.txt  runme  test-desc.txt
Classifier/test/test12/images/: face00784.txt
Classifier/test/test13/: CMakeLists.txt  correct-output-IIS.txt  correct-output.txt  imgLabels.txt  imgReadDriver2.cpp  makeme  runme  test-desc.txt
Training/: README  resr
Training/Dataset/: README  convert-to-txt.sh  validation-set.sh
Training/cpp/: README  calc_features.cpp  calc_features.h  config_0.txt  config_1.txt  data.h  makeme  runme  stage.cpp  stage.h  training.cpp  training_util.cpp  validate.cpp  validate.h
Training/cpp/config1/: config_2.txt
Training/cpp/config2/: config_1.txt  config_2.txt  config_3.txt
Training/cpp/config3/: config_0.txt  config_1.txt  config_2.txt
Training/cpp/config4/: config4_out.txt  config_0.txt  config_1.txt  config_2.txt  config_3.txt
Training/cpp/config5/: config_1.txt  config_2.txt  config_3.txt
(+64 files in other folders)
